# CellularAutomata

./: CMakeLists.txt  CMakePresets.json  main.cpp
source/: main.cpp
source/cpp/: Grid.cpp  Input.cpp
source/h/: Comp.h  Grid.h  Input.h
